--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:layout_height="280dp"
                 android:layout_marginTop="-40dp"
                 android:elevation="25dp"
-                app:cardBackgroundColor="#65d3a5"
+                app:cardBackgroundColor="#E0E0E0"
                 app:cardCornerRadius="30dp">
 
                 <LinearLayout
@@ -76,7 +76,8 @@
                                     android:layout_height="match_parent"
                                     android:gravity="center"
                                     android:paddingBottom="0.5dp"
-                                    android:text="2"
+                                    android:text="1"
+                                    android:textColor="@color/black"
                                     android:textSize="6sp" />
                             </androidx.cardview.widget.CardView>
 
@@ -133,7 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="2dp"
-                    app:cardBackgroundColor="#000000"
+                    app:cardBackgroundColor="@color/black"
                     app:cardCornerRadius="10dp">
 
                     <LinearLayout
@@ -179,7 +180,7 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#65d3a5"
+                    app:cardBackgroundColor="#E0E0E0"
                     app:cardCornerRadius="10dp">
 
                     <LinearLayout
@@ -203,7 +204,7 @@
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
-                    app:cardBackgroundColor="#65d3a5"
+                    app:cardBackgroundColor="#E0E0E0"
                     app:cardCornerRadius="10dp">
 
                     <LinearLayout
@@ -228,7 +229,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
                     android:layout_marginRight="5dp"
-                    app:cardBackgroundColor="#65d3a5"
+                    app:cardBackgroundColor="#E0E0E0"
                     app:cardCornerRadius="10dp">
 
                     <LinearLayout
@@ -280,7 +281,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/blog"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:scrollbars="horizontal">
 
                 <LinearLayout
@@ -295,7 +299,7 @@
                         android:layout_height="120dp"
                         android:layout_marginEnd="10dp"
                         android:padding="10dp"
-                        app:cardBackgroundColor="#65d3a5"
+                        app:cardBackgroundColor="#E0E0E0"
                         app:cardCornerRadius="30dp">
 
                         <LinearLayout
@@ -352,23 +356,16 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent">
 
-                                <!-- DATE row: alignParentStart & toStartOf readMoreCard -->
+                                <!-- DATE row: alignParentStart & toStartOf readMoreCard5 -->
                                 <LinearLayout
                                     android:layout_width="120dp"
                                     android:layout_height="30dp"
-                                    android:layout_alignParentBottom="true"
                                     android:layout_alignParentStart="true"
-                                    android:layout_toStartOf="@id/readMoreCard5"
+                                    android:layout_alignParentBottom="true"
                                     android:layout_marginStart="10dp"
+                                    android:layout_toStartOf="@id/readMoreCard5"
                                     android:gravity="center_vertical"
                                     android:orientation="horizontal">
-
-<!--                                    <ImageView-->
-<!--                                        android:id="@+id/imageView6"-->
-<!--                                        android:layout_width="20dp"-->
-<!--                                        android:layout_height="20dp"-->
-<!--                                        android:scaleType="centerInside"-->
-<!--                                        app:srcCompat="@drawable/calender" />-->
 
                                     <TextView
                                         android:id="@+id/textView7"
@@ -376,7 +373,7 @@
                                         android:layout_height="wrap_content"
                                         android:padding="2dp"
                                         android:text="13 Aug, 2023"
-                                        android:textColor="#FFFFFF"
+                                        android:textColor="@color/black"
                                         android:textSize="10sp" />
                                 </LinearLayout>
 
@@ -394,8 +391,8 @@
                                         android:id="@+id/blog_content_1"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:gravity="center"
                                         android:background="@color/black"
+                                        android:gravity="center"
                                         android:orientation="vertical">
 
                                         <TextView
@@ -416,7 +413,7 @@
                         android:layout_height="120dp"
                         android:layout_marginEnd="10dp"
                         android:padding="10dp"
-                        app:cardBackgroundColor="#FFA726"
+                        app:cardBackgroundColor="#E0E0E0"
                         app:cardCornerRadius="30dp">
 
                         <LinearLayout
@@ -477,19 +474,12 @@
                                 <LinearLayout
                                     android:layout_width="120dp"
                                     android:layout_height="30dp"
-                                    android:layout_alignParentBottom="true"
                                     android:layout_alignParentStart="true"
-                                    android:layout_toStartOf="@id/readMoreCard8"
+                                    android:layout_alignParentBottom="true"
                                     android:layout_marginStart="10dp"
+                                    android:layout_toStartOf="@id/readMoreCard8"
                                     android:gravity="center_vertical"
                                     android:orientation="horizontal">
-
-<!--                                    <ImageView-->
-<!--                                        android:id="@+id/imageViewDate8"-->
-<!--                                        android:layout_width="20dp"-->
-<!--                                        android:layout_height="20dp"-->
-<!--                                        android:scaleType="centerInside"-->
-<!--                                        app:srcCompat="@drawable/calender" />-->
 
                                     <TextView
                                         android:id="@+id/textViewDate8"
@@ -497,8 +487,9 @@
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
                                         android:paddingStart="5dp"
+
                                         android:text="20 Sep, 2023"
-                                        android:textColor="#FFFFFF"
+                                        android:textColor="@color/black"
                                         android:textSize="10sp" />
                                 </LinearLayout>
 
@@ -516,8 +507,8 @@
                                         android:id="@+id/blog_content_2"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:gravity="center"
                                         android:background="@color/black"
+                                        android:gravity="center"
                                         android:orientation="vertical">
 
                                         <TextView
@@ -538,7 +529,7 @@
                         android:layout_height="120dp"
                         android:layout_marginEnd="10dp"
                         android:padding="10dp"
-                        app:cardBackgroundColor="#29B6F6"
+                        app:cardBackgroundColor="#E0E0E0"
                         app:cardCornerRadius="30dp">
 
                         <LinearLayout
@@ -599,19 +590,12 @@
                                 <LinearLayout
                                     android:layout_width="120dp"
                                     android:layout_height="30dp"
-                                    android:layout_alignParentBottom="true"
                                     android:layout_alignParentStart="true"
-                                    android:layout_toStartOf="@id/readMoreCard9"
+                                    android:layout_alignParentBottom="true"
                                     android:layout_marginStart="10dp"
+                                    android:layout_toStartOf="@id/readMoreCard9"
                                     android:gravity="center_vertical"
                                     android:orientation="horizontal">
-
-<!--                                    <ImageView-->
-<!--                                        android:id="@+id/imageViewDate9"-->
-<!--                                        android:layout_width="20dp"-->
-<!--                                        android:layout_height="20dp"-->
-<!--                                        android:scaleType="centerInside"-->
-<!--                                        app:srcCompat="@drawable/calender" />-->
 
                                     <TextView
                                         android:id="@+id/textViewDate9"
@@ -620,7 +604,7 @@
                                         android:layout_weight="1"
                                         android:paddingStart="5dp"
                                         android:text="05 Oct, 2023"
-                                        android:textColor="#FFFFFF"
+                                        android:textColor="@color/black"
                                         android:textSize="10sp" />
                                 </LinearLayout>
 
@@ -638,8 +622,8 @@
                                         android:id="@+id/blog_content_3"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:gravity="center"
                                         android:background="@color/black"
+                                        android:gravity="center"
                                         android:orientation="vertical">
 
                                         <TextView
