--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,9 @@
                 <com.google.android.material.bottomnavigation.BottomNavigationView
                     android:id="@+id/bottom_navigation"
                     android:layout_width="match_parent"
+                    app:itemTextColor="@color/white"
+                    app:itemIconTint="@color/white"
+                    android:elevation="4dp"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     app:labelVisibilityMode="labeled"
