--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".fragments.HomeFragment">
 
     <ScrollView
@@ -24,7 +25,7 @@
                 android:layout_height="280dp"
                 android:layout_marginTop="-40dp"
                 android:elevation="25dp"
-                app:cardBackgroundColor="#706D6D"
+                app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="30dp">
 
                 <LinearLayout
@@ -128,7 +129,7 @@
                 android:layout_height="180dp"
                 android:layout_below="@id/top_card"
                 android:orientation="horizontal"
-                android:padding="5dp">
+                android:padding="15dp">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -163,7 +164,7 @@
                 android:text="Daily Cure Fact About..."
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:textColor="#302E2E"
+                android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -193,6 +194,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Covid"
+                            android:textColor="@color/black"
                             android:textSize="26sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -217,6 +219,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Fever"
+                            android:textColor="@color/black"
                             android:textSize="26sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -242,6 +245,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Cancer"
+                            android:textColor="@color/black"
                             android:textSize="26sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -263,7 +267,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="BLOGS"
-                    android:textColor="#302E2E"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -272,7 +276,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:text="See all"
-                    android:textColor="#302E2E"
+                    android:textColor="@color/white"
                     android:textSize="15sp" />
             </RelativeLayout>
 
