--- a/android/app/src/main/res/layout/fragment_prescription.xml
+++ b/android/app/src/main/res/layout/fragment_prescription.xml
@@ -7,6 +7,7 @@
     tools:context=".fragments.PrescriptionFragment"
     android:background="#EFF4F8"> <ScrollView
     android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent"
     android:scrollbars="none">
 
